--- a/templates/search.html
+++ b/templates/search.html
@@ -18,8 +18,8 @@
         <nav>
           <ul class="nav nav-pills pull-right">
             <li role="presentation" ><a href="main">Home</a></li>
-            <li role="presentation"><a href="#">Sign In</a></li>
-            <li role="presentation" class="active"><a href="#">Sign Up</a></li>
+            <li role="presentation"><a href="login">Login</a></li>
+            <li role="presentation" class="active"><a href="#">Search</a></li>
           </ul>
         </nav>
         <h3 class="text-muted">UW Scheduler</h3>
