--- a/templates/search.html
+++ b/templates/search.html
@@ -20,7 +20,6 @@
         <nav>
           <ul class="nav nav-pills pull-right">
             <li role="presentation" ><a href="main">Home</a></li>
-            <li role="presentation"><a href="login">Login</a></li>
             <li role="presentation" class="active"><a href="#">Search</a></li>
           </ul>
         </nav>
@@ -44,7 +43,7 @@
 
 
       <footer class="footer">
-        <p>&copy; Company 2015</p>
+        <p>&copy; ABC 2016</p>
       </footer>
 
     </div>
