--- a/templates/login.html
+++ b/templates/login.html
@@ -20,9 +20,7 @@
       <div class="header">
         <nav>
           <ul class="nav nav-pills pull-right">
-            <li role="presentation" ><a href="main">Home</a></li>
-            <li role="presentation" class="active"><a href="login">Login</a></li>
-            <li role="presentation"><a href="search">Search</a></li>
+
           </ul>
         </nav>
         <h3 class="text-muted">UW Scheduler</h3>
@@ -42,7 +40,7 @@
 
 
       <footer class="footer">
-        <p>&copy; Company 2015</p>
+        <p>&copy; ABC 2016</p>
       </footer>
 
     </div>
