--- a/templates/search.html
+++ b/templates/search.html
@@ -27,7 +27,7 @@
       </div>
 
       <div class="jumbotron">
-        <h1>Search for Classes</h1>
+        <h2>Search for Classes</h2>
         <form class="form-signin">
           <label for="subject" class="sr-only">Subject</label>
           <input type="name" name="subject" id="subject" class="form-control" placeholder="Subject" required autofocus>
@@ -72,11 +72,13 @@
         </form>
       </div>
       <div>
-        <table class="courses-table" style="width:100%; display:none;align:center" >
-          <tr>
+        <table class="courses-table" style="width:100%; display:none;" >
+          <tr align="center">
             <th> Course Name </th>
+            <th> Day </th>
             <th> Start Time </th>
             <th> End Time </th>
+            <th> </th>
           </tr>
         </table>
       </div>
